--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-dgl==0.6.1
 easydict==1.9
 networkx==2.5.1
-numpy==1.17.4
+numpy==1.24.4
 pyqtgraph==0.12.2
 pytransform3d==1.9.1
+PyOpenGL==3.1.7
+PyQt5==5.15.10
 PyYAML==6.0
 scikit_learn==1.1.2
 scipy==1.8.1
-torch==1.11.0
-torchvision==0.12.0
+torch==2.1.1
+torchvision==0.16.1
